<resources>
    <string name="app_name">记账本</string>

    <string name="bt_confirm" translatable="false">确定</string>
    <string name="bt_cancel">取消</string>

    <string name="add_new_account_number">金额：</string>
    <string name="add_new_account_createTime">时间：</string>
    <string name="add_new_account_person">付款人：</string>
    <string name="add_new_account_content">备注：</string>

    <string-array name="member">
        <item>xkw</item>
        <item>强哥</item>
        <item>齐姐姐</item>
        <item>慧瑶</item>
    </string-array>

    <!--主菜单选项-->
    <string name="action_search">搜索</string>
    <string name="action_summary">账单统计</string>
    <string name="action_journey_mode">旅行AA记账</string>
    <string name="action_setting">设置</string>
    <string name="action_about">关于</string>
    <string name="account_in">收入</string>
    <string name="account_out">支出</string>

    <!--旅行菜单选项-->
    <string name="loading">加载中&#8230;</string>
    <string name="load_more">上拉加载更多</string>
    <string name="load_failed">无更多数据</string>
    <string name="title_activity_new_journey">新的旅程</string>

    <!--新建旅程页面-->
    <string name="new_journey_destination">旅行名:</string>
    <string name="new_journey_destination_hint">起个拉风的名字吧</string>
    <string name="new_journey_person">旅行伙伴：</string>
    <string name="new_journey_person_hint">伙伴姓名</string>
    <string name="new_journey_add">添加</string>
    <string name="new_journey_delete">删除</string>
    <string name="new_journey_confirm">确认添加</string>

    <!--新建账单页面-->
    <string name="new_account_currency">货币种类：</string>
    <string name="new_account_person">付款人：</string>
    <string name="new_account_in">收入</string>
    <string name="new_account_out">支出</string>

    <!--关于页面-->
    <string name="about_app_introduction">
        &#160;&#160;本款APP主要目标为用户的日常记账功能，并在此基础上实现了月度统计、旅行记账和搜索等功能。\n\n
        月度统计功能：\n
        \t 1.本月使用账单总览；\n
        \t 2.过去半年内每月账单金额统计。\n\n
        旅行记账功能：\n
        \t 1.在个人日常记账的基础上，新增了旅行AA记账；\n
        \t 2.记录所有的已完成旅程数据；\n
        \t 3.可以通过记录付款人的方式，追踪每笔订单；\n
        \t 4.统计界面明确列出旅程总消费和个人支出以及应付/收款数额。\n
    </string>

    <!--设置页面-->
    <string name="setting_instruction">
        请设置你的主要货币和次要货币。\n\n
        主要货币 —— 新增订单时默认选中的货币，和总结页面默认的货币结算方式\n\n
        次要货币 —— 总结页面的补充货币结算方式\n\n
        注：若日常只使用一种货币，则主要和次要选则同种货币即可。
    </string>
    <string name="setting_primary_type">主要货币：</string>
    <string name="setting_secondary_type">次要货币：</string>
    <string-array name="currency_type">
        <item>USD</item>
        <item>HKD</item>
        <item>RMB</item>
    </string-array>

    <!--统计页面-->
    <string name="daily_account_summary_header">本月总结</string>
    <string name="summary_dollar">美元</string>
    <string name="summary_rmb">人民币</string>
    <string name="summary_hk">港币</string>
    <string name="summary_out">支出</string>
    <string name="summary_in">收入</string>
    <string name="summary_exchange_rate">汇率：</string>
    <string name="summary_total">总计</string>
    <string name="cnt_chart_header">近半年账单汇总</string>
    <string name="choose_date">请选择日期：</string>
    <string-array name="year">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>
    <string-array name="month">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

</resources>
