<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ToolbarPopupTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_setting_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_instruction"
        android:textSize="@dimen/small_text_size"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:gravity="center_vertical|start"
        app:layout_constraintTop_toBottomOf="@id/toolbar_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_primary_currency"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="36dp"
        android:gravity="center_vertical|start"
        android:text="@string/setting_primary_type"
        android:textColor="@color/text_color"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_setting_instruction" />

    <Spinner
        android:id="@+id/sp_primary_currency"
        android:layout_width="180dp"
        android:layout_height="36dp"
        android:dropDownWidth="match_parent"
        android:overlapAnchor="false"
        android:spinnerMode="dropdown"
        android:textColor="@color/text_color"
        android:textSize="@dimen/normal_text_size"
        android:entries="@array/currency_type"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toEndOf="@+id/tv_primary_currency"
        app:layout_constraintTop_toBottomOf="@+id/tv_setting_instruction" />

    <TextView
        android:id="@+id/tv_secondary_currency"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center_vertical|start"
        android:text="@string/setting_secondary_type"
        android:textColor="@color/text_color"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_primary_currency" />

    <Spinner
        android:id="@+id/sp_secondary_currency"
        android:layout_width="180dp"
        android:layout_height="36dp"
        android:dropDownWidth="match_parent"
        android:overlapAnchor="false"
        android:spinnerMode="dropdown"
        android:textColor="@color/text_color"
        android:textSize="@dimen/normal_text_size"
        android:entries="@array/currency_type"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toEndOf="@id/tv_secondary_currency"
        app:layout_constraintTop_toBottomOf="@id/sp_primary_currency" />

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_secondary_currency">

        <android.support.design.button.MaterialButton
            android:id="@+id/bt_cancel"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bt_cancel"
            android:textSize="@dimen/normal_text_size"
            style="@style/Widget.Shrine.Button"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/bt_submit"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bt_confirm"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            style="@style/Widget.Shrine.Button"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>